tests/build/fail/widget/attrs_allowed_in_when_properties.stderr
error: only `cfg` and lint attributes are allowed in property assign
  --> $DIR/attrs_allowed_in_when_properties.rs:25:13
   |
25 |             /// doc
   |             ^^^^^^^

error: only `cfg` and lint attributes are allowed in property assign
  --> $DIR/attrs_allowed_in_when_properties.rs:28:15
   |
28 |             #[inline]
   |               ^^^^^^

error: only `cfg` and lint attributes are allowed in property assign
  --> $DIR/attrs_allowed_in_when_properties.rs:31:15
   |
31 |             #[foo(bar)]
   |               ^^^

error: only `cfg` and lint attributes are allowed in property assign
  --> $DIR/attrs_allowed_in_when_properties.rs:34:20
   |
34 |             #[foo::bar(true)]
   |                    ^^^
